begining update user
