# app/Http/Controllers/UserController.php
@@ -39,4 +39,76 @@ class UserController extends Controller
             ->find($userId);
         return response()->json($user);
     }
+
+
+    /**
+     * @OA\Put(
+     *     path="/api/users/{id}",
+     *     summary="Update a user",
+     *     tags={"Users"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID of the user to update",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"prenom", "nom", "poste", "email", "statut"},
+     *             @OA\Property(property="prenom", type="string", example="John"),
+     *             @OA\Property(property="nom", type="string", example="Doe"),
+     *             @OA\Property(property="poste", type="string", example="Developer"),
+     *             @OA\Property(property="email", type="string", example="john.doe@example.com"),
+     *             @OA\Property(property="statut", type="string", example="Active")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="id", type="integer", example=1),
+     *             @OA\Property(property="prenom", type="string", example="John"),
+     *             @OA\Property(property="nom", type="string", example="Doe"),
+     *             @OA\Property(property="poste", type="string", example="Developer"),
+     *             @OA\Property(property="email", type="string", example="john.doe@example.com"),
+     *             @OA\Property(property="statut", type="string", example="Active")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="User not found"
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Validation error"
+     *     )
+     * )
+     */
+    public function update(Request $request, $id)
+    {
+        $validator = Validator::make($request->all(), [
+            'prenom' => 'required|string|max:255',
+            'nom' => 'required|string|max:255',
+            'poste' => 'required|string|max:255',
+            'email' => 'required|email|max:255|unique:users,email,' . $id,
+            'statut' => 'required|int|in:0,1',
+        ]);
+
+        if ($validator->fails()) {
+            return response()->json($validator->errors(), 422);
+        }
+
+        $user = User::find($id);
+
+        if (!$user) {
+            return response()->json(['error' => 'User not found'], 404);
+        }
+
+        $user->update($request->all());
+
+        return response()->json($user, 200);
+    }
 }
